--- a/index.html
+++ b/index.html
@@ -3,54 +3,8 @@ layout: page
 title: Subway Map API
 ---
 
-<div class="swagger-section">
-	
-  <script type="text/javascript">
-  
-    $(function () 
-    	{
-		var url = window.location.search.match(/url=([^&]+)/);
-  		if (url && url.length > 1) {
-    	url = url[1];
-  		} 
-  	else 
-  		{
-    	url = "http://subway.map.api.apievangelist.com/definitions/subway-maps.json";
-  		}
-  
-  window.swaggerUi = new SwaggerUi({
-    url: url,
-    dom_id: "swagger-ui-container",
-    supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
-    onComplete: function(swaggerApi, swaggerUi){
-      log("Loaded SwaggerUI");
-      if(typeof initOAuth == "function") {
-        /*
-        initOAuth({
-          clientId: "your-client-id",
-          realm: "your-realms",
-          appName: "your-app-name"
-        });
-        */
-      }
-      $('pre code').each(function(i, e) {
-        hljs.highlightBlock(e)
-      });
-    },
-    onFailure: function(data) {
-      log("Unable to Load SwaggerUI");
-    },
-    docExpansion: "none",
-    sorter : "alpha",
-    docExpansion: "list"
-  });
-
-      window.swaggerUi.load();
-  });
-
-  </script>     
-	<div id="swagger-ui-container" class="swagger-ui-wrap"></div>
-</div>
+<h1>Subway Map API</h1>
+<p>This projects</p>
 
 <p>This API is maintained by <a href="http://kinlane.com">Kin Lane</a> (<a href="https://twitter.com/kinlane">@kinlane</a>), the API Evangelist. If you have any questions, comments or there are APIs you'd like to see deployed, you can <a href="https://github.com/kinlane/services/issues" target="_blank">submit them on this projects, Github repo issue management</a>. I use <a href="http://bit.ly/13esk6Q" target="_blank">3Scale API Infrastructure</a> to manage <a href="https://apievangelist.3scale.net/" target="_blank">access to my APIs</a>, across all parts of the <a href="http://apievangelist.com/network.html">API Evangelist network</a>.</p>
 <br /><br />
