--- a/lifecycle.html
+++ b/lifecycle.html
@@ -1,32 +1,73 @@
----
-layout: page
-title: Subway Map - API Lifecycle
----
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Subway Map</title>
+    <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <style type="text/css">
+    body
+    {
+        font-family: Verdana;
+        font-size: 8pt;
+    }
 
-<h1>Subway Map - API Lifecycle</h1>
-<p>This is an example map that I have imported into the system. It shows what is possible with the Subway Map API.</p>
+    /* The main DIV for the map */
+    .subway-map
+    {
+        margin: 0;
+        width: 500px;
+        height:410px;
+        background-color: white;
+    }
 
+    /* Text labels */
+    .text
+    {
+        text-decoration: none;
+        color: black;
+    }
+
+    #legend
+    {
+        float: left;
+        width: 250px;
+        height:400px;
+    }
+
+    #legend div
+    {
+        height: 25px;
+    }
+
+    #legend span
+    {
+        margin: 5px 5px 5px 0;
+    }
+    .subway-map span
+    {
+        margin: 5px 5px 5px 0;
+    }
+ 
+    </style>
+</head>
+<body>
+	
+<h1>Subway Map - API Lifecycle</h1>	
+	
 <script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>	
 
 <div class="subway-map" data-columns="28" data-rows="4" data-cellSize="40" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="10">
 
-		<ul data-color="#FF0000" data-label="API Lifecycle">
-			<li data-coords="2,2" data-marker="interchange">Design</li>
-			<li data-coords="6,2" data-marker="interchange">Deployment</li>
-			<li data-coords="10,2" data-marker="interchange">Management</li>
-			<li data-coords="14,2" data-marker="interchange">Discovery</li>
-			<li data-coords="18,2" data-marker="interchange">Integration</li>
-			<li data-coords="22,2" data-marker="interchange">Monitoring</li>
-		</ul>
+	<ul data-color="#FF0000" data-label="API Lifecycle">
+		<li data-coords="2,2" data-marker="interchange">Design</li>
+		<li data-coords="6,2" data-marker="interchange">Deployment</li>
+		<li data-coords="10,2" data-marker="interchange">Management</li>
+		<li data-coords="14,2" data-marker="interchange">Discovery</li>
+		<li data-coords="18,2" data-marker="interchange">Integration</li>
+		<li data-coords="22,2" data-marker="interchange">Monitoring</li>
+	</ul>
 </div>
 <script type="text/javascript">$(".subway-map").subwayMap({ debug: true });</script> 
+    
+</body>
+</html>
 
-<p>This API is maintained by <a href="http://kinlane.com">Kin Lane</a> (<a href="https://twitter.com/kinlane">@kinlane</a>), the API Evangelist. If you have any questions, comments or there are APIs you'd like to see deployed, you can <a href="https://github.com/kinlane/services/issues" target="_blank">submit them on this projects, Github repo issue management</a>. I use <a href="http://bit.ly/13esk6Q" target="_blank">3Scale API Infrastructure</a> to manage <a href="https://apievangelist.3scale.net/" target="_blank">access to my APIs</a>, across all parts of the <a href="http://apievangelist.com/network.html">API Evangelist network</a>.</p>
-<br /><br />
-<!-- 3scale -->
-<p align="center">
-<a href="http://3scale.net" target="_blank" title="APIs From 3Scale">
-    <img src="https://s3.amazonaws.com/kinlane-productions/api-service-providers/3Scale/empowered-by-3scale.png" width="300" style="padding-bottom: 15px;" />
-</a>        
-</p>
-<!-- 3scale -->    
+   
