--- a/example-2.html
+++ b/example-2.html
@@ -52,7 +52,9 @@
 	
 <h1>Subway Map - Example 2</h1>	
 	
-<script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>	<div class="subway-map" data-columns="30" data-rows="30" data-cellSize="33" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="8">
+<script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>	
+
+<div class="subway-map" data-columns="30" data-rows="30" data-cellSize="33" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="8">
 
 		<ul data-color="#efefef" data-label="National Projects">
 			<li data-coords="0,20.25"></li>
