--- a/lifecycle.html
+++ b/lifecycle.html
@@ -50,11 +50,11 @@
 </head>
 <body>
 	
-<h1>Subway Map - API Lifecycle</h1>	
+<h1>API Lifecycle (Subway Map)</h1>	
 	
 <script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>	
 
-<div class="subway-map" data-columns="28" data-rows="4" data-cellSize="40" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="10">
+<div class="subway-map" data-columns="28" data-rows="4" data-cellSize="1" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="10">
 
 	<ul data-color="#FF0000" data-label="API Lifecycle">
 		<li data-coords="2,2" data-marker="interchange">Design</li>
