--- a/example-2.html
+++ b/example-2.html
@@ -2,6 +2,7 @@
 <head>
     <title>Subway Map</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
+    <script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>
     <style type="text/css">
     body
     {
@@ -50,11 +51,9 @@
 </head>
 <body>
 	
-<h1>Subway Map - Example 2</h1>	
-	
-<script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>	
+<h1>Subway Map - Example 2</h1>		
 
-<div style="border: 1px solid #000;" class="subway-map" data-columns="60" data-rows="60" data-cellSize="5" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="8">
+<div class="subway-map" data-columns="30" data-rows="30" data-cellSize="33" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="8">
 
 		<ul data-color="#efefef" data-label="National Projects">
 			<li data-coords="0,20.25"></li>
