--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Subway Maps API - Home
 
 <h1>Subway Map API</h1>
 
-<p><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-metro-map-575.png" align="right" width="250" style="padding: 10px;" /></p>
+<p><a href="http://apievangelist.com/network.html"><img src="https://s3.amazonaws.com/kinlane-productions/api-evangelist/api-evangelist-metro-map-575.png" align="right" width="325" style="padding: 10px;" /></a></p>
 <p>A long time ago I defined the API Evangelist network using a subway map format, plotting out the different routes you could take, and the locations all along this journey. As with anything I do, this is a work in progress, and I’m needing to regularly update this map. Currently it is in an image, and I use an image mapping tool to make the links—something that is very time consummating.</p>
 
 <p>I think the subway map is an important metaphor for understanding some potentially complex ideas, and provide a single map, complete with legends, supporting content, and links to more details. My problem is I have several maps I need to create, and maintain on a regular basis. Ideally my subway mapping tool would be dynamic, allowing me to make changes as I went along.</p>
@@ -16,6 +16,7 @@ title: Subway Maps API - Home
 
 <p>I’m still playing with what is possible, but my <a href="http://subway.map.apievangelist.com/api.html"></a>Subway Map API</a> allows you to generate maps, adding routes, and locations along the routes. The API just takes advantage of all the features that Nik Kalyani added into the plugin, I just provided web APis for them. This project isn’t fully secured yet, so I can still play with. It will be changing fast, and I will be resetting the database regularly, so if you play with it, make sure and let me know.</p>
 
+<br /><br />
 <!-- 3scale -->
 <p align="center">
 <a href="http://3scale.net" target="_blank" title="APIs From 3Scale">
