--- a/api-design.html
+++ b/api-design.html
@@ -55,14 +55,6 @@
 
 <div class="subway-map" data-columns="30" data-rows="30" data-cellSize="33" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="8">
 
-		<ul data-color="#efefef" data-label="National Projects">
-			<li data-coords="0,20.25"></li>
-			<li data-coords="2.2,18.25" data-marker="@interchange">TAPor2</li>
-			<li data-coords="3.85,16.25" data-marker="@interchange">CWRC</li>
-			<li data-coords="6,14.25"></li>
-			<li data-coords="30,14.25"></li>
-		</ul>
-
 		<ul data-color="#efefef">
 			<li data-coords="14.75,30"></li>
 			<li data-coords="14.75,26" data-marker="interchange">Best Practices</li>
@@ -90,15 +82,15 @@
 			<li data-coords="7,11.6"></li>
 			<li data-coords="7,13.4">Resources</li>
 			<li data-coords="7,14"></li>
-			<li data-coords="8,15" data-marker="interchange" data-markerInfo="v3" data-dir="S">HTTP Status Success</li>
-			<li data-coords="10,15" data-marker="interchange" data-markerInfo="v3">HTTP Status Redirection</li>
+			<li data-coords="8,15" data-marker="interchange" data-markerInfo="v3" data-dir="S">Success</li>
+			<li data-coords="10,15" data-marker="interchange" data-markerInfo="v3">Redirection</li>
 			<li data-coords="14,15" data-marker="interchange" data-markerInfo="h2">
 Bibliograph</li>
-			<li data-coords="18,15" data-marker="interchange" data-markerInfo="v3">HTTP Status Server Error</li>
-			<li data-coords="21,15" data-marker="interchange" data-markerInfo="v4">HTTP Status User Error</li>
+			<li data-coords="18,15" data-marker="interchange" data-markerInfo="v3">Server Error</li>
+			<li data-coords="21,15" data-marker="interchange" data-markerInfo="v4">User Error</li>
 			<li data-coords="21.5,15" data-dir="E"></li>
 			<li data-coords="22.5,16" data-dir="E"></li>
-			<li data-coords="22.5,18" data-marker="station">HTTP Status Server Error</li>
+			<li data-coords="22.5,18" data-marker="station">Server Error</li>
 			<li data-coords="23.5,19" data-dir="S"></li>
 			<li data-coords="25,19"></li>
 		</ul>
