--- a/api-lifecycle.html
+++ b/api-lifecycle.html
@@ -4,7 +4,7 @@
 <head>
     <title>Subway Map</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>
+    <script type="text/javascript" src="/js/jquery.subwayMap-0.5.0.js"></script>
     <style type="text/css">
     body
     {
