--- a/example-1.html
+++ b/example-1.html
@@ -2,7 +2,7 @@
 <head>
     <title>Subway Map</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>
+    <script type="text/javascript" src="/js/jquery.subwayMap-0.5.0.js"></script>
     <style type="text/css">
     body
     {
@@ -46,45 +46,45 @@
     {
         margin: 5px 5px 5px 0;
     }
- 
+
     </style>
 </head>
 <body>
-	
-<h1>Subway Map - Example 1</h1>	
-	
-		
+
+<h1>Subway Map - Example 1</h1>
+
+
     <div class="subway-map" data-columns="12" data-rows="10" data-cellSize="40" data-legendId="legend" data-textClass="text" data-gridNumbers="true" data-grid="false" data-lineWidth="8">
-    	
-        <ul data-color="#FF0000" data-label="Route One">          
-            <li data-coords="2,2" data-marker="interchange"><a href="/" title="One Stop">One</a></li>  
-            <li data-coords="4,2"><a href="" title="Two Stop">Two</a></li>  
-            <li data-coords="5,3" data-dir="E"></li>  
+
+        <ul data-color="#FF0000" data-label="Route One">
+            <li data-coords="2,2" data-marker="interchange"><a href="/" title="One Stop">One</a></li>
+            <li data-coords="4,2"><a href="" title="Two Stop">Two</a></li>
+            <li data-coords="5,3" data-dir="E"></li>
             <li data-coords="5,7" data-marker="@station" data-labelPos="W"><a href="">Three</a></li>
-            <li data-coords="6,4" data-dir="S" data-marker="interchange" data-markerInfo="h5"><a href="">Four</a></li>  
-            <li data-coords="7,4"></li>  
+            <li data-coords="6,4" data-dir="S" data-marker="interchange" data-markerInfo="h5"><a href="">Four</a></li>
+            <li data-coords="7,4"></li>
             <li data-coords="7.15,8" data-marker="@station" data-labelPos="E"><a href="">Five</a></li>
-            <li data-coords="8,3" data-dir="E"></li>  
-            <li data-coords="8,2"></li>  
-            <li data-coords="9,1" data-dir="N"></li>  
-            <li data-coords="10,2" data-dir="E" data-marker="interchange" data-labelPos="E"><a href="">Six</a></li>  
-            <li data-coords="10,5"></li>  
-            <li data-coords="9,6" data-dir="S" data-marker="station"><a href="">Seven</a></li>  
-            <li data-coords="6,9"></li>  
-            <li data-coords="5,8" data-dir="W"></li>  
-            <li data-coords="5,7"></li>  
-            <li data-coords="4,6" data-dir="N"></li>  
-            <li data-coords="2,6"><a href="http://jqueryui.com/demos/tabs/">Eight</a></li>  
+            <li data-coords="8,3" data-dir="E"></li>
+            <li data-coords="8,2"></li>
+            <li data-coords="9,1" data-dir="N"></li>
+            <li data-coords="10,2" data-dir="E" data-marker="interchange" data-labelPos="E"><a href="">Six</a></li>
+            <li data-coords="10,5"></li>
+            <li data-coords="9,6" data-dir="S" data-marker="station"><a href="">Seven</a></li>
+            <li data-coords="6,9"></li>
+            <li data-coords="5,8" data-dir="W"></li>
+            <li data-coords="5,7"></li>
+            <li data-coords="4,6" data-dir="N"></li>
+            <li data-coords="2,6"><a href="http://jqueryui.com/demos/tabs/">Eight</a></li>
         </ul>
 
-        <ul data-color="#000" data-label="Route Two" data-shiftCoords="0,-1">      
-            <li data-coords="2,6"></li> 
+        <ul data-color="#000" data-label="Route Two" data-shiftCoords="0,-1">
+            <li data-coords="2,6"></li>
             <li data-coords="2,5.9" data-marker="@interchange"></li>
-            <li data-coords="5,6" data-marker="@station" data-labelPos="N"><a href="">One</a></li>  
-            <li data-coords="6,6"></li>  
-            <li data-coords="7,3" data-marker="@station" data-labelPos="W"><a href="">Two</a></li>  
-            <li data-coords="7,5" data-dir="E" data-marker="station" data-labelPos="E"><a href="">Three</a></li>  
-            <li data-coords="7,1" data-marker="interchange" data-labelPos="W"><a href="">Four</a></li>  
+            <li data-coords="5,6" data-marker="@station" data-labelPos="N"><a href="">One</a></li>
+            <li data-coords="6,6"></li>
+            <li data-coords="7,3" data-marker="@station" data-labelPos="W"><a href="">Two</a></li>
+            <li data-coords="7,5" data-dir="E" data-marker="station" data-labelPos="E"><a href="">Three</a></li>
+            <li data-coords="7,1" data-marker="interchange" data-labelPos="W"><a href="">Four</a></li>
         </ul>
 
     </div>
@@ -93,8 +93,6 @@
     <script type="text/javascript">
         $(".subway-map").subwayMap({ debug: true });
     </script>
-    
+
 </body>
 </html>
-
-   
