--- a/lifecycle.html
+++ b/lifecycle.html
@@ -2,7 +2,7 @@
 <head>
     <title>Subway Map</title>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-    <script type="text/javascript" src="http://runtime.api.apievangelist.com/subway-map/jquery.subwayMap-0.5.0.js"></script>
+    <script type="text/javascript" src="/js/jquery.subwayMap-0.5.0.js"></script>
     <style type="text/css">
     body
     {
@@ -46,12 +46,12 @@
     {
         margin: 5px 5px 5px 0;
     }
- 
+
     </style>
 </head>
 <body>
-	
-<h1>API Lifecycle (Subway Map)</h1>		
+
+<h1>API Lifecycle (Subway Map)</h1>
 
 <div class="subway-map" data-columns="24" data-rows="4" data-cellSize="25" data-legendId="legend" data-grid="false" data-gridNumbers="true" data-lineWidth="10">
 
@@ -64,9 +64,7 @@
 		<li data-coords="22,2" data-marker="interchange">Monitoring</li>
 	</ul>
 </div>
-<script type="text/javascript">$(".subway-map").subwayMap({ debug: true });</script> 
-    
+<script type="text/javascript">$(".subway-map").subwayMap({ debug: true });</script>
+
 </body>
 </html>
-
-   
